// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component should have container classname 1`] = `
<div
  className="container"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;

exports[`Container component should have helper classnames 1`] = `
<div
  className="container is-paddingless is-hidden-desktop is-flex-touch is-block-widescreen-only"
>
  <p
    className="bd-notification is-success"
  >
    <p>
      Default
    </p>
    <p>
      Container
    </p>
  </p>
</div>
`;
